# tree-menu

./: README.md  db.dump  pyproject.toml  requirements.txt
src/: manage.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py
src/tree_menu/menu/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/tree_menu/menu/migrations/: 0001_initial.py
src/tree_menu/menu/static/menu/css/: styles.css
src/tree_menu/menu/templates/menu/: index.html  menu.html
src/tree_menu/menu/templatetags/: menu.py
