[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["Ilya Verbilo <verbiloilyaa@gmail.com>"]
readme = "README.md"
packages = [{include = "tree_menu"}]

[tool.poetry.dependencies]
python = "^3.10.10"
django = "^4.1.4"
django-environ = "^0.9.0"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
